Fixed the links hitboxes extending way past the bubbles because that's cheating. Also makes the website actually work on mobile, hopefully.

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html {
 
 ul {
     /* nav bar stuff*/
-
+    visibility: visible;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -245,6 +245,7 @@ p {
     cursor: pointer;
 }
 
+
 @media screen and (max-width: 1222px) {
 
     .container,
@@ -287,7 +288,7 @@ p {
     }
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     .grid {
         -webkit-column-count: 1;
         -webkit-column-gap: 0px;
@@ -298,4 +299,38 @@ p {
         gap: 1%;
         width: 100%;
     }
+} */
+
+
+@media screen and (max-width: 690px) {
+
+    ul, .sidebar, .bubble:after, .mini-bubble:after {
+        visibility: hidden;
+    }
+
+    .container,
+    .bubble, .mini-bubble, .gallery-bubble {
+        flex-direction: column;
+        margin-left: 10px;
+        margin-right: 10px;
+        max-width: 100%;
+    }
+
+    .image {
+        max-width: min-content;
+        height: auto;
+        margin-bottom: 1%;
+    }
+
+    .grid {
+        -webkit-column-count: 2;
+        -webkit-column-gap: 0px;
+        -moz-column-count: 2;
+        -moz-column-gap: 0px;
+        column-count: 2;
+        column-gap: 0px;
+        gap: 1%;
+        width: 100%;
+    }
+
 }
